--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
