--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "vite": "^5.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -24,7 +25,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.3.4"
+    "eslint-plugin-react-refresh": "^0.4.6"
   }
 }
